<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="20sp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#35bf4d"
        android:layout_gravity="center_horizontal"

        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/my"
        android:id="@+id/myself"
        android:layout_marginTop="20sp"
        android:background="#ff9650"
        android:textColor="#ffffff"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/education"
        android:id="@+id/education"
        android:layout_marginTop="10sp"
        android:background="#bf35a7"
        android:textColor="#ffffff"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/skill"
        android:id="@+id/skill"
        android:layout_marginTop="10sp"
        android:background="#d59597"
        android:textColor="#ffffff"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/experience"
        android:id="@+id/experience"
        android:layout_marginTop="10sp"
        android:background="#c8a5bc"
        android:textColor="#ffffff"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/family"
        android:id="@+id/family"
        android:layout_marginTop="10sp"
        android:background="#a0d7ce"
        android:textColor="#ffffff"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/contact"
        android:id="@+id/contact"
        android:layout_marginTop="10sp"
        android:background="#35bf4d"
        android:textColor="#ffffff"
        />

</LinearLayout>