<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back3"
    tools:context=".Me">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/image2"
        android:id="@+id/image"
        />
    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/name"
        android:textSize="25sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/about"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/details"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/indetails"
        android:id="@+id/details"
        android:drawableLeft="@drawable/right"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold"
        />
</LinearLayout>