<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FF9650"
    android:padding="20dp"
    tools:context=".Myself">

    <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/cv"
            />
    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="ABOUT MYSELF"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"/>

    <TextView
           android:layout_width="350dp"
           android:layout_height="40dp"
           android:text="@string/myname"
           android:layout_marginTop="10dp"
           android:background="#fdd46f38"
           android:padding="5dp"
           android:textStyle="bold"
           android:textColor="#FFFFFF"
           android:textSize="20sp"/>

    <TextView
        android:layout_width="350dp"
        android:text="@string/gender"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#fdd46f38"
        android:textColor="#FFFFFF"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#fdd46f38"
        android:text="@string/blood"
        android:textColor="#FFFFFF"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#fdd46f38"
        android:text="@string/religion"
        android:padding="5dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#fdd46f38"
        android:text="@string/nationality"
        android:padding="5dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="20sp"/>


</LinearLayout>