<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#A0D7CE"
    android:padding="10dp"
    tools:context=".Family">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/images"
        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="FAMILY"
        android:padding="5dp"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:text="@string/father"
        android:layout_marginLeft="20dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="15sp"
        />

    <TextView
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:text="@string/mother"
        android:layout_marginLeft="20dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:text="@string/fathersoccupation"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:text="@string/brother"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:text="@string/brothers"
        android:padding="5dp"
        android:background="#FFFFFF"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textSize="15sp"/>


</LinearLayout>